tests/should-fail/semantics/return-null-as-code.j
function test takes nothing returns code
    return null
endfunction
